combine the way of getting room message API and put it into room controller. modify swagger doc.
