# swagger.json
@@ -71,6 +71,48 @@
         }
       }
     },
+    "/room/message": {
+      "get": {
+        "tags": [
+          "room"
+        ],
+        "summary": "Get room message for client and cs",
+        "parameters": [
+          {
+            "in": "query",
+            "name": "client_id",
+            "schema": {
+              "type": "integer"
+            },
+            "required": true,
+            "description": "client_id為客戶端id(必填)"
+          },
+          {
+            "in": "query",
+            "name": "resource_id",
+            "schema": {
+              "type": "integer"
+            },
+            "required": false,
+            "description": "resource_id為來源id(選填)"
+          }
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "取得成功"
+          },
+          "204": {
+            "description": "無匹配資料"
+          }
+        }
+      }
+    },
     "/member/client/add": {
       "post": {
         "tags": [
@@ -113,48 +155,6 @@
         "parameters": [
           {
             "in": "path",
-            "name": "resource_id",
-            "schema": {
-              "type": "integer"
-            },
-            "required": true,
-            "description": "resource_id為客戶端id(必填)"
-          }
-        ],
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "responses": {
-          "200": {
-            "description": "取得成功"
-          },
-          "204": {
-            "description": "無任何訊息"
-          }
-        }
-      }
-    },
-    "/client/message": {
-      "get": {
-        "tags": [
-          "client"
-        ],
-        "summary": "Get client room all messages.",
-        "parameters": [
-          {
-            "in": "query",
-            "name": "client_id",
-            "schema": {
-              "type": "integer"
-            },
-            "required": true,
-            "description": "client_id為客戶端id(必填)"
-          },
-          {
-            "in": "query",
             "name": "resource_id",
             "schema": {
               "type": "integer"
